<resources>
    <string name="app_name">ChirpMeIn</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">ChirpMeIn</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbChirpMeIn</string>

    <string name="chirp">Chirp</string>
    <string name="me">Me</string>
    <string name="in">In</string>
    <string name="icon_attribution">Icon made by SmashIcons from www.flaticon.com</string>
    <string name="sign_out">Sign Out</string>
    <string name="logo_text">The ChirpMeIn logo</string>
</resources>