<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title_chirp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/chirp"
            android:textColor="@color/app_text_blue"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/title_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/me"
            android:textColor="@color/app_text_orange"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/title_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/in"
            android:textColor="@color/app_text_blue"
            android:textSize="48sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:id="@+id/title_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logo_text"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/chirp_me_in" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/my_button_bg_sleek"
            android:text="@string/sign_out"
            android:textAllCaps="false"
            android:textColor="@color/buttonDefault" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </com.google.android.gms.common.SignInButton>
    </LinearLayout>

    <TextView
        android:id="@+id/icon_attribution_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/icon_attribution" />
</LinearLayout>